update configuration.rst