@@ -22,13 +22,10 @@ public class CSVEdgeMapping extends EdgeMapping{
 
     @Override
     public String toString() {
-        String header =  super.toString() +
-                """
-                Mapped columns:
-                """;
+        String header =  super.toString() + "Mapped columns:\n";
         StringBuilder builder = new StringBuilder(header);
         for (Map.Entry<Integer, String> mapping : mappedColumns.entrySet()) {
-            builder.append("\t%d -> %s\n".formatted(mapping.getKey(), mapping.getValue()));
+            builder.append(String.format("\t%d -> %s\n", mapping.getKey(), mapping.getValue()));
         }
         return builder.toString();
     }
